--- a/unit1.lfm
+++ b/unit1.lfm
@@ -70,7 +70,7 @@ object Form1: TForm1
       ParentFont = False
       TabOrder = 0
     end
-    object b_Clopboard: TButton
+    object b_Clipboard: TButton
       Left = 4
       Height = 28
       Top = 39
@@ -83,7 +83,7 @@ object Form1: TForm1
       BorderSpacing.Right = 4
       BorderSpacing.Bottom = 4
       Caption = 'Kopiere Beschimpfung in die Zwischenablage!'
-      OnClick = b_ClopboardClick
+      OnClick = b_ClipboardClick
       ParentFont = False
       TabOrder = 1
     end
