--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,7 +1,7 @@
 object Form1: TForm1
-  Left = 641
+  Left = 622
   Height = 283
-  Top = 50
+  Top = 275
   Width = 397
   Align = alCustom
   Caption = 'Schimpfomat v2.0'
@@ -115,5 +115,18 @@ object Form1: TForm1
     OnClick = b_ExitClick
     ParentFont = False
     TabOrder = 3
+  end
+  object cb_Screenshot: TCheckBox
+    Left = 16
+    Height = 19
+    Top = 251
+    Width = 125
+    Anchors = [akTop, akLeft, akBottom]
+    BorderSpacing.Left = 4
+    BorderSpacing.Top = 4
+    BorderSpacing.Right = 4
+    BorderSpacing.Bottom = 4
+    Caption = 'Screenshot erstellen'
+    TabOrder = 4
   end
 end
