Signed-off-by: mbergmann-sh <mb@mbergmann-sh.de>

--- a/unit1.lfm
+++ b/unit1.lfm
@@ -1,12 +1,13 @@
 object Form1: TForm1
-  Left = 622
-  Height = 283
-  Top = 275
-  Width = 397
+  Left = 2369
+  Height = 268
+  Top = 266
+  Width = 376
   Align = alCustom
   Caption = 'Schimpfomat v2.0'
-  ClientHeight = 283
-  ClientWidth = 397
+  ClientHeight = 268
+  ClientWidth = 376
+  DesignTimePPI = 91
   OnActivate = FormActivate
   OnCloseQuery = FormCloseQuery
   OnCreate = FormCreate
@@ -15,24 +16,24 @@ object Form1: TForm1
   Visible = True
   object GroupBox1: TGroupBox
     Left = 8
-    Height = 87
-    Top = 29
-    Width = 376
+    Height = 82
+    Top = 25
+    Width = 356
     Anchors = [akLeft, akRight]
     BorderSpacing.Left = 2
     BorderSpacing.Top = 2
     BorderSpacing.Right = 2
     BorderSpacing.Bottom = 2
     Caption = 'Verrate mir Deinen Namen!'
-    ClientHeight = 67
-    ClientWidth = 372
+    ClientHeight = 63
+    ClientWidth = 354
     ParentFont = False
     TabOrder = 0
     object ed_FirstName: TEdit
       Left = 4
-      Height = 59
+      Height = 55
       Top = 4
-      Width = 364
+      Width = 346
       Align = alClient
       BorderSpacing.Left = 4
       BorderSpacing.Top = 4
@@ -45,24 +46,24 @@ object Form1: TForm1
   end
   object GroupBox2: TGroupBox
     Left = 8
-    Height = 105
-    Top = 133
-    Width = 378
+    Height = 100
+    Top = 123
+    Width = 358
     Anchors = [akLeft, akRight]
     BorderSpacing.Left = 2
     BorderSpacing.Top = 2
     BorderSpacing.Right = 2
     BorderSpacing.Bottom = 2
     Caption = 'Ausgabe für soziale Medien'
-    ClientHeight = 85
-    ClientWidth = 374
+    ClientHeight = 81
+    ClientWidth = 356
     ParentFont = False
     TabOrder = 1
     object ed_Ausgabe: TEdit
       Left = 4
-      Height = 23
+      Height = 30
       Top = 4
-      Width = 366
+      Width = 348
       Align = alTop
       BorderSpacing.Left = 4
       BorderSpacing.Top = 4
@@ -73,9 +74,9 @@ object Form1: TForm1
     end
     object b_Clipboard: TButton
       Left = 4
-      Height = 25
-      Top = 56
-      Width = 366
+      Height = 32
+      Top = 45
+      Width = 348
       Align = alBottom
       Anchors = [akRight]
       AutoSize = True
@@ -90,10 +91,10 @@ object Form1: TForm1
     end
   end
   object b_Hello: TButton
-    Left = 178
-    Height = 25
-    Top = 251
-    Width = 125
+    Left = 165
+    Height = 24
+    Top = 237
+    Width = 118
     Anchors = [akBottom]
     BorderSpacing.Left = 4
     BorderSpacing.Top = 4
@@ -106,10 +107,10 @@ object Form1: TForm1
     TabOrder = 2
   end
   object b_Exit: TButton
-    Left = 312
-    Height = 25
-    Top = 251
-    Width = 75
+    Left = 294
+    Height = 24
+    Top = 237
+    Width = 71
     Anchors = [akBottom]
     Caption = 'Tschüss...'
     OnClick = b_ExitClick
@@ -117,16 +118,17 @@ object Form1: TForm1
     TabOrder = 3
   end
   object cb_Screenshot: TCheckBox
-    Left = 16
-    Height = 19
-    Top = 251
-    Width = 125
+    Left = 15
+    Height = 18
+    Top = 238
+    Width = 145
     Anchors = [akTop, akLeft, akBottom]
     BorderSpacing.Left = 4
     BorderSpacing.Top = 4
     BorderSpacing.Right = 4
     BorderSpacing.Bottom = 4
     Caption = 'Screenshot erstellen'
+    ParentFont = False
     TabOrder = 4
   end
 end
